2004-01-25 04:15  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSLayoutManager.m (-invalidateDisplayForCharacterRange:,
	-textStorage:edited:range:changeInLength:invalidatedRange:): Adjust
	a few edge cases so that no work is done if there is no existing
	layout information.

2004-01-24 15:17  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Headers/AppKit/NSDataLink.h: Added ivars.
	* Source/NSDataLink.m: Added implementation of some methods.

2004-01-23 21:32  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: Removal of some commented out test code.

2004-01-22 13:15  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSFontPanel.m (-_initWithoutGModel): Use -setTitle: to set
	the titles of the buttons, not -setStringValue:. Patch from Matt
	Rice.

2004-01-22 13:09  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSButton.m: Rename _nsbuttonCellClass to buttonCellClass
	and make it static.

2004-01-22 13:06  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSActionCell.m (-encodeWithCoder:): Encode nil instead of
	the control view.

2004-01-22 13:04  Alexander Malmberg <alexander@malmberg.org>

	* Headers/Additions/GNUstepGUI/GSDrawFunctions.h: Add missing
	include guards.

	* Source/GSDrawFunctions.m: Correct misspellings and clarify the
	documentation.

2004-01-22 12:16  Alexander Malmberg <alexander@malmberg.org>

	* Model/GMAppKit.m ([NSFont +createObjectForModelUnarchiver:]):
	If there's no font of the decoded name, fall back to the system
	font of the decoded size.

2004-01-19  Kazunobu Kuriyama <kazunobu.kuriyama@nifty.com>

	* GNUmakefile.postamble (after-distclean): Fix deletion of config.make.

2004-01-18  Adam Fedor  <fedor@gnu.org>

	* Source/GSDrawFunctions.m: New class.
	* Source/NSBox.m ([NSBox -drawRect:]): Use it.

2004-01-17 Serg Stoyan <stoyan@on.com.ua>

	* Source/NSBrowser.m:
	(frameOfColumn:): Adjust horizontal position if browser doesn't have
	horizontal scroller.